<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name" tools:ignore="MissingTranslation">丫丫</string>
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="verify_second" tools:ignore="MissingTranslation">秒后重新发送</string>
    <string name="get_verify_code" tools:ignore="MissingTranslation">获取验证码</string>
    <string name="login" tools:ignore="MissingTranslation">登录</string>
    <string name="et_phone" tools:ignore="MissingTranslation">请输入登录手机号</string>
    <string name="et_login_possword" tools:ignore="MissingTranslation">请输入登录密码(6-12位)</string>
    <string name="register_name" tools:ignore="MissingTranslation">注册账号</string>
    <string name="number_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="register_et_phone_code">请输入手机验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="et_invitationcode">输入邀请码</string>
    <string name="homepage">首页</string>
    <string name="my">我的</string>
    <string name="inventory">库存</string>
    <string name="orderform">订单</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="retrievepassword">忘记密码</string>
    <string name="photo">拍照</string>
    <string name="camera">相册</string>
    <string name="upgame">上架游戏币</string>
    <string name="up_jia">上架</string>
    <string name="personaldata">个人资料</string>
    <string name="setting">设置</string>
    <string name="update_ps">修改密码</string>
    <string name="custom_service">联系客服</string>
    <string name="custom_service_tv">
        我们客服在线时间为：9:00 - 18:00
    </string>
    <string name="custom_service_tv2">
        如有需要，请拨打：xxx-xxx-xxx
    </string>
    <string name="pay_receive">支付宝收款码</string>
    <string name="now_buy">立即购买</string>
    <string name="system_msg">系统消息</string>
    <string name="my_invite">我的邀请</string>
    <string name="book">小账本</string>
    <string name="myincome">我的收益</string>
    <string name="wechatpay_receive">微信收款码</string>
    <string name="small_book">小账本</string>
    <string name="invite_friend">邀请朋友</string>
    <string name="forget_pas">忘记密码</string>
    <string name="et_new_login_possword">请输入新的登录密码（6-12位）</string>
    <string name="commit_overform">提交订单</string>
    <string name="affirm_msg">确认信息</string>
    <string name="look_stock_state">查看进货状态</string>
    <string name="go_up">去上架</string>
    <string name="networkerr">网络请求有误!</string>
    <string name="username_login_hint">\"您的当前账户已在其他设备登陆，为安全起见，请及时修改密码或重新登陆!\"</string>
    <string name="loading">丫丫正在努力加载中...</string>
    <string name="title_activity_rebate_record">RebateRecordActivity</string>
    <string name="error">\"服务器错误！\"</string>

</resources>
