<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <com.administrator.yaya.design.CommonTitle
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        app:canBack="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/login_back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:src="@mipmap/back_hover"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/c_000000"
                android:textSize="@dimen/dp_18" />
        </RelativeLayout>
    </com.administrator.yaya.design.CommonTitle>

    <ImageView
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:id="@+id/login_headler_iv"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_30"
        />

    <LinearLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_et"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        >
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/shake"
            />
        <EditText
            android:id="@+id/et_uname"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_31"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_et"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        >
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/key"
            />
        <EditText
            android:id="@+id/et_login_password"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_login_possword"
            android:inputType="textPassword"
            android:lines="1"
            />
    </LinearLayout>
    <Button
        android:id="@+id/findpass_ok_btn"
        android:layout_width="@dimen/dp_305"
        android:layout_height="@dimen/dp_44"
        android:background="@drawable/shape_btn"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/login"
        android:textColor="@color/c_ffffff"
        android:layout_gravity="center"
        android:textSize="@dimen/sp_18"
        android:textStyle="normal"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Registered"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_13"
            android:text="@string/register_name"
            />
        <TextView
            android:layout_width="@dimen/dp_0_5"
            android:layout_height="@dimen/dp_14"
            android:background="@color/c_000000"
            />
        <TextView
            android:id="@+id/tv_ForgetPassword"
            android:layout_marginLeft="@dimen/dp_30"
            android:textSize="@dimen/sp_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_password"
            />
    </LinearLayout>
</LinearLayout>