<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff"
    tools:context=".activity.RetrievePasswordActivity">
    <ImageView
        android:layout_width="@dimen/dp_312_5"
        android:layout_height="@dimen/dp_127_5"
        android:src="@mipmap/logo"
        android:layout_alignParentBottom="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <com.administrator.yaya.design.CommonTitle
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        app:canBack="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--忘记密码-->
            <ImageView
                android:id="@+id/forget_back_iv"
                android:layout_width="@dimen/dp_9"
                android:layout_height="@dimen/dp_15"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:src="@mipmap/icon_back"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/retrievepassword"
                android:textColor="@color/c_title_tvcolor"
                android:textSize="@dimen/sp_18"
                />
        </RelativeLayout>
    </com.administrator.yaya.design.CommonTitle>

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="@dimen/dp_113_5"
        android:layout_height="@dimen/dp_113_5"
        android:id="@+id/register_headler_iv"
        android:src="@mipmap/icon"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_30"
        app:riv_corner_radius_top_left="@dimen/dp_10"
        app:riv_corner_radius_bottom_right="@dimen/dp_10"
        app:riv_corner_radius_bottom_left="@dimen/dp_10"
        app:riv_corner_radius_top_right="@dimen/dp_10"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="repeat"
        />
    <LinearLayout
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_13_5"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@mipmap/dl_shuru"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        >
        <ImageView
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginBottom="@dimen/dp_14"
            android:layout_marginLeft="@dimen/dp_22"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/shake"
            tools:ignore="ContentDescription"
            />
        <EditText
            android:id="@+id/forget_et_phone"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="@dimen/dp_34_5"
        android:layout_marginLeft="@dimen/dp_35_5"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@mipmap/dl_shuru"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        >
        <ImageView
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_14"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/yz"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <EditText
                android:id="@+id/forget_et_verificationCode"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/sp_14"
                android:maxLines="1"
                android:password="true"
                android:hint="@string/register_et_phone_code"
                />
            <TextView
                android:id="@+id/forget_getcode_btn"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_36"
                android:textSize="@dimen/sp_14"
                android:gravity="center"
                android:textColor="@color/c_ffffff"
                android:background="@drawable/shape_btn"
                android:text="@string/getcode"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@mipmap/dl_shuru"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        >
        <ImageView
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginBottom="@dimen/dp_14"
            android:layout_marginLeft="@dimen/dp_19"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/key"
            />
        <EditText
            android:id="@+id/forget_et_login_password"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_login_possword"
            android:inputType="textPassword"
            android:lines="1"
            />
    </LinearLayout>

        <Button
            android:id="@+id/forget_ok_btn"
            android:layout_width="330dp"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_35"
            android:background="@drawable/shape_btn"
            android:text="@string/ok"
            android:textColor="@color/c_ffffff" />
    </LinearLayout>
</RelativeLayout>