<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <com.administrator.yaya.design.CommonTitle
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        app:canBack="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/register_back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:src="@mipmap/back_hover"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="@color/c_ffffff"
                android:textSize="@dimen/sp_18"
                />
        </RelativeLayout>
    </com.administrator.yaya.design.CommonTitle>

    <ImageView
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:id="@+id/register_headleriv"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_30"
        />

    <!--<com.administrator.yaya.design.SmsVerifyView-->
        <!--android:id="@+id/sms_verify_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--/>-->

    <LinearLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_et"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        >
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/shake"
            />
        <EditText
            android:id="@+id/register_et_uname"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_et"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        >
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/yz"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <EditText
            android:id="@+id/et_register_verificationcode"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:password="true"
            android:hint="@string/register_et_phone_code"
            />
        <TextView
            android:id="@+id/btn_register_phonecode"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_36"
            android:textSize="@dimen/sp_14"
            android:gravity="center"
            android:textColor="@color/c_ffffff"
            android:background="@drawable/shape_btn"
            android:text="@string/getcode"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_et"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        >
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/key"
            />
        <EditText
            android:id="@+id/et_register_pw"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_login_possword"
            android:inputType="textPassword"
            android:lines="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_et"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        >
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/icon_yq"
            />
        <EditText
            android:id="@+id/et_getcode"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_invitationcode"
            />
    </LinearLayout>
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="登     录"-->
        <!--android:textSize="@dimen/sp_14"-->
        <!--android:textColor="@color/white"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:padding="@dimen/dp_10"-->
        <!--android:onClick="register"-->
        <!--android:layout_marginLeft="@dimen/dp_80"-->
        <!--android:layout_marginRight="@dimen/dp_80"-->
        <!--android:background="@color/app_theme_color"-->
        <!--android:layout_marginTop="@dimen/dp_30"-->
        <!--/>-->

    <Button
        android:id="@+id/register_register_btn"
        android:layout_width="@dimen/dp_305"
        android:layout_height="@dimen/dp_44"
        android:background="@drawable/shape_btn"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/register"
        android:textColor="@color/c_ffffff"
        android:layout_gravity="center"
        />

</LinearLayout>