<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff"
    tools:context=".activity.my.UpdataPasswordActivity">

    <ImageView
        android:layout_width="@dimen/dp_312_5"
        android:layout_height="@dimen/dp_127_5"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/logo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44">

            <ImageView
                android:id="@+id/update_back_iv"
                android:layout_width="@dimen/dp_39"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/ripple_bg"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:src="@mipmap/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="找回密码"
                android:textColor="#333333"
                android:textSize="@dimen/sp_18"
                tools:ignore="SpUsage" />
        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_35">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_18"
                    android:layout_marginLeft="@dimen/dp_18"
                    android:layout_marginTop="@dimen/dp_13"
                    android:src="@mipmap/shake"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/update_et_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_13"
                    android:background="@null"
                    android:digits="1234567890"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/et_phone"
                    android:inputType="phone|number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/c_000000"
                    android:textColorHint="@color/c_et_tvcolor"
                    android:textCursorDrawable="@drawable/edit_cursor_color"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="normal" />
            </LinearLayout>
        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="@dimen/dp_35"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_40"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:background="@drawable/shape_login_et"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_marginLeft="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_13"
                android:src="@mipmap/yz" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/update_et_verificationCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:background="@null"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/register_et_phone_code"
                    android:inputType="phone|number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/c_000000"
                    android:textColorHint="@color/c_et_tvcolor"
                    android:textCursorDrawable="@drawable/edit_cursor_color"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/update_btv_getverificationCode"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_36"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/ripple_btn"
                    android:gravity="center"
                    android:text="@string/getcode"
                    android:textColor="@color/c_ffffff"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>
        </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="@dimen/dp_35"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_40"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:background="@drawable/shape_login_et"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_marginLeft="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_13"
                android:src="@mipmap/key" />

            <EditText
                android:id="@+id/update_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_13"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/et_new_login_possword"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/c_000000"
                android:textColorHint="@color/c_et_tvcolor"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal" />
        </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/update_ok_btn"
            android:layout_width="@dimen/dp_305"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_35"
            android:background="@drawable/ripple_btn"
            android:text="@string/ok"
            android:textColor="@color/c_ffffff" />
    </LinearLayout>
</RelativeLayout>